[project]
name = "ErisPulse-YunhuAdapter"
version = "1.0.0"
description = "ErisPulse, 云湖协议适配器，整合所有云湖功能模块"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

# 可以直接依赖对应的ErisPulse模块包名
dependencies = [
    
]

[project.urls]
"homepage" = "https://github.com/ErisPulse/YunhuAdapter"

[project.entry-points]
"erispulse.adapter" = { "YunhuAdapter" = "adapter:YunhuAdapter" }
